# Acronis_Archronis

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  zipper.cpp  zipper.hpp
src/collecter/: collecter.cpp  collecter.hpp
src/encoder/: encoder.cpp  encoder.hpp
src/encoder/tree/: tree.hpp
src/support/: Istreams.hpp
